@@ -14,6 +14,7 @@
 # mode = <player mode>          Force tracker emulation
 # mono = yes/no                 Mono output
 # mix = value                   Stereo channel separation (0 - 100)
+# mixer_voices = value          Maximum number of virtual channels
 # reverse = yes/no              Reverse L/R stereo channels
 # vblank = yes/no               Force vblank timing instead of CIA
 
