@@ -94,6 +94,11 @@
 #
 #interpolation = spline
 
+# mixer_voices = <val>
+# Set the maximum number of virtual channels. Default is 128.
+#
+#mixer_voices = 128
+
 
 ##########################################################################
 ####
